@@ -1,3 +1,8 @@
+2001-10-30  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* backends/val-encode.c: add missing headers to remove
+	some warnings.
+
 2001-10-29  jacob berkman  <jacob@ximian.com>
 
 	* gconf-editor/gconf-editor.c (main): bind to GETTEXT_PACKAGE
